--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="pt-br" xml:lang="pt-br">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>THE GOOD NEWS TIME</title>
-<link rel="stylesheet" type="text/css" href="/projetoitautechturma5/css/estilo.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="https://thegoodnewstime.netlify.app/css/estilo.css" media="screen" />
 </head>
 
 <body>
@@ -12,13 +12,13 @@
 			<h1>The Good News Time</h1>
 		</div>		
 		<div id="logo">
-			<img src="img/tgnt_logo.png" width="427" height="165">
+			<img src="https://thegoodnewstime.netlify.app/img/tgnt_logo.png" width="427" height="165">
 		</div>
 		<div id="menusuperior">		
-			<div><a href="index.html">Home</a></div>
-			<div><a href="sobrenos.html">Sobre</a></div>
-			<div><a href="contato.html">Contato</a></div>
-			<div><a href="paginadenoticias.html">Saiba Mais</a></div>
+			<div><a href="https://thegoodnewstime.netlify.app/index.html">Home</a></div>
+			<div><a href="https://thegoodnewstime.netlify.app/sobrenos.html">Sobre</a></div>
+			<div><a href="https://thegoodnewstime.netlify.app/contato.html">Contato</a></div>
+			<div><a href="https://thegoodnewstime.netlify.app/paginadenoticias.html">Saiba Mais</a></div>
 		</div>
 
 			<div id="noticiasemdestaques">
@@ -29,23 +29,23 @@
 
 				<div class="noticiasdestaques">
 						<h3>Meninas afegãs criam ventilador pulmonar de baixo custo para salvar pacientes com Covid-19</h3>
-						<img class="imgdanoticia" src="/projetoitautechturma5/img/noticia-boa-covid-1.jpg">		
+						<img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/projetoitautechturma5/img/noticia-boa-covid-1.jpg">		
 						<p class="introdanoticia">Em 2017, um grupo com cerca de 50 jovens afegãs do Ensino Médio criaram uma equipe de robótica que busca empoderar mulheres do Afeganistão por meio da Ciência, Tecnologia, Engenharia e Matemática.</p>
-						<div><a href="noticia-boa-01.html">Ler noticia completa</a></div>
+						<div><a href="https://thegoodnewstime.netlify.app/noticia-boa-01.html">Ler noticia completa</a></div>
 				</div> 
 
 				<div class="noticiasdestaques">
 					<h3>Cinco estados brasileiros não registram mortes por Covid-19 nas últimas 24 horas</h3>
-					<img class="imgdanoticia" src="/projetoitautechturma5/img/noticia-boa-covid-2.jpg">		
+					<img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/projetoitautechturma5/img/noticia-boa-covid-2.jpg">		
 					<p class="introdanoticia">Segundo levantamento da Agência CNN junto aos dados do Ministério da Saúde, os estados do Acre, Amapá, Roraima, Rio Grande do Norte e Rondônia não registraram nenhuma morte por Covid-19 nas últimas 24 horas.....</p>
-					<div><a href="noticia-boa-02.html">Ler Noticia completa</a></div>
+					<div><a href="https://thegoodnewstime.netlify.app/noticia-boa-02.html">Ler Noticia completa</a></div>
 				</div>
 
 				<div class="noticiasdestaques">
 					<h3>Vacina em fase teste contra COVID-19 chega ao Brasil - Plantão COVID-19: As boas notícias!</h3>
-					<img class="imgdanoticia" src="/projetoitautechturma5/img/noticia-boa-covid-3.jpg">		
+					<img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/projetoitautechturma5/img/noticia-boa-covid-3.jpg">		
 					<p class="introdanoticia">No Plantão de Boas Notícias sobre o covid-19 desta semana, falamos sobre a imunidade que pode estar mais difundida do que imaginamos e vacinas contra coronavírus, que já chegaram ao Brasil! - Confira!</p>
-					<div><a href="noticia-boa-03.html">Assistir Noticia</a></div>
+					<div><a href="https://thegoodnewstime.netlify.app/noticia-boa-03.html">Assistir Noticia</a></div>
 				</div>
 
 			</div>	
@@ -54,23 +54,23 @@
 
 				<div class="noticiasdestaques">
 					<h3>Pesquisadores desenvolvem máscara facial que detecta Covid-19 em 90 minutos</h3>
-						<img class="imgdanoticia" src="/projetoitautechturma5/img/noticia-boa-covid-4.jpg">		
+						<img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/projetoitautechturma5/img/noticia-boa-covid-4.jpg">		
 						<p class="introdanoticia">Uma equipe de engenheiros de duas das mais prestigiadas instituições de pesquisa do mundo desenvolveu uma máscara facial com minúsculos sensores descartáveis capazes de detectar o covid-19</p>
-						<div><a href="noticia-boa-04.html">Ler Noticia completa</a></div>
+						<div><a href="https://thegoodnewstime.netlify.app/noticia-boa-04.html">Ler Noticia completa</a></div>
 				</div> 
 
 				<div class="noticiasdestaques">
 						<h3>Anticorpos contra o coronavírus em desenvolvimento - Plantão COVID-19</h3>
-						<a href="noticia-boa-05.html"><img class="imgdanoticia" src="/projetoitautechturma5/img/noticia-boa-covid-5.jpg"></a>	
+						<a href="noticia-boa-05.html"><img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/projetoitautechturma5/img/noticia-boa-covid-5.jpg"></a>	
 						<p class="introdanoticia">O plantão de boas notícias está de volta! Hoje vamos falar sobre um novo remédio que teria 94% de eficiência contra o novo coronavírus e um bebê que saiu da UTI e virou símbolo de esperança. Confira!</p>
-						<div><a href="noticia-boa-05.html">Assistir Noticia</a></div>
+						<div><a href="https://thegoodnewstime.netlify.app/noticia-boa-05.html">Assistir Noticia</a></div>
 				</div>
 
 				<div class="noticiasdestaques">
 					<h3>Possível data para vacinação total no Brasil – Plantão COVID-19: As boas notícias</h3>
-					<a href="noticia-boa-06.html"><img class="imgdanoticia" src="/projetoitautechturma5/img/noticia-boa-covid-6.jpg"></a>		
+					<a href="noticia-boa-06.html"><img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/projetoitautechturma5/img/noticia-boa-covid-6.jpg"></a>		
 					<p class="introdanoticia">Hoje vamos falar sobre a possível data para vacinação completa do Brasil. Brasil possui 4 das 6 vacinas mais avançadas e ainda temos a vacina do Butantan que espera começar a produzir vacinas em outubro.</p>
-					<div><a href="noticia-boa-06.html">Assistir Noticia</a></div>
+					<div><a href="https://thegoodnewstime.netlify.app/noticia-boa-06.html">Assistir Noticia</a></div>
 				</div>
 
 			</div>
