--- a/noticia-boa-01.html
+++ b/noticia-boa-01.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="pt-br" xml:lang="pt-br">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>THE GOOD NEWS TIME</title>
-<link rel="stylesheet" type="text/css" href="/projetoitautechturma5/css/estilo.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="https://thegoodnewstime.netlify.app/css/estilo.css" media="screen" />
 </head>
 
 <body>
@@ -12,20 +12,20 @@
 			<h1>The Good News Time</h1>
 		</div>		
 		<div id="logo">
-			<img src="img/tgnt_logo.png" width="427" height="165">
+			<img src="https://thegoodnewstime.netlify.app/img/tgnt_logo.png" width="427" height="165">
 		</div>
 		<div id="menusuperior">		
-			<div><a href="index.html">Home</a></div>
-			<div><a href="sobrenos.html">Sobre</a></div>
-			<div><a href="contato.html">Contato</a></div>
-			<div><a href="paginadenoticias.html">Saiba Mais</a></div>
+			<div><a href="https://thegoodnewstime.netlify.app/index.html">Home</a></div>
+			<div><a href="https://thegoodnewstime.netlify.app/sobrenos.html">Sobre</a></div>
+			<div><a href="https://thegoodnewstime.netlify.app/contato.html">Contato</a></div>
+			<div><a href="https://thegoodnewstime.netlify.app/paginadenoticias.html">Saiba Mais</a></div>
 		</div>
 
 			<div class="noticiaonepage">
 
 				<div class="destaqueonepage">
                     <h3>Meninas afegãs criam ventilador pulmonar de baixo custo para salvar pacientes com Covid-19</h3>
-                    <img class="imgdanoticia" src="/projetoitautechturma5/img/noticia-boa-covid-1.jpg">	
+                    <img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/img/noticia-boa-covid-1.jpg">	
 				    <p class="onepagenoticia">
                         Em 2017, um grupo com cerca de 50 jovens afegãs do Ensino Médio criaram uma equipe de robótica que busca empoderar mulheres do Afeganistão por meio da Ciência, Tecnologia, Engenharia e Matemática.<br>
 						Conhecida como ‘Sonhadoras Afegãs‘, a equipe vinha recebendo financiamento do Digital Citizen Fund para desenvolver projetos, mas seu futuro agora é incerto, devido à instalação do regime fundamentalista talibã.<br>
