--- a/noticia-boa-02.html
+++ b/noticia-boa-02.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="pt-br" xml:lang="pt-br">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>THE GOOD NEWS TIME</title>
-<link rel="stylesheet" type="text/css" href="/projetoitautechturma5/css/estilo.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="https://thegoodnewstime.netlify.app/css/estilo.css" media="screen" />
 </head>
 
 <body>
@@ -12,20 +12,20 @@
 			<h1>The Good News Time</h1>
 		</div>		
 		<div id="logo">
-			<img src="img/tgnt_logo.png" width="427" height="165">
+			<img src="https://thegoodnewstime.netlify.app/img/tgnt_logo.png" width="427" height="165">
 		</div>
 		<div id="menusuperior">		
-			<div><a href="index.html">Home</a></div>
-			<div><a href="sobrenos.html">Sobre</a></div>
-			<div><a href="contato.html">Contato</a></div>
-			<div><a href="paginadenoticias.html">Saiba Mais</a></div>
+			<div><a href="https://thegoodnewstime.netlify.app/index.html">Home</a></div>
+			<div><a href="https://thegoodnewstime.netlify.app/sobrenos.html">Sobre</a></div>
+			<div><a href="https://thegoodnewstime.netlify.app/contato.html">Contato</a></div>
+			<div><a href="https://thegoodnewstime.netlify.app/paginadenoticias.html">Saiba Mais</a></div>
 		</div>
 
 			<div class="noticiaonepage">
 
 				<div class="destaqueonepage">
                     <h3>Cinco estados brasileiros não registram mortes por Covid-19 nas últimas 24 horas</h3>
-                    <img class="imgdanoticia" src="/projetoitautechturma5/img/noticia-boa-covid-2.jpg">	
+                    <img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/img/noticia-boa-covid-2.jpg">	
 					<p class="onepagenoticia">
 						Segundo levantamento da Agência CNN junto aos dados do Ministério da Saúde, os estados do Acre, Amapá, Roraima, Rio Grande do Norte e Rondônia não registraram nenhuma morte por Covid-19 nas últimas 24 horas.<br>
 						Em todo o país, foram registrados 8.639 novos casos e 182 mortes, mesmo número de 6 de setembro, e o menor número desde novembro de 2020.<br>
