--- a/sobrenos.html
+++ b/sobrenos.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="pt-br" xml:lang="pt-br">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>THE GOOD NEWS TIME</title>
-<link rel="stylesheet" type="text/css" href="/projetoitautechturma5/css/estilo.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="https://thegoodnewstime.netlify.app/css/estilo.css" media="screen" />
 </head>
 
 <body>
@@ -12,13 +12,13 @@
 			<h1>The Good News Time</h1>
 		</div>		
 		<div id="logo">
-			<img src="img/tgnt_logo.png" width="427" height="165">
+			<img src="https://thegoodnewstime.netlify.app/img/tgnt_logo.png" width="427" height="165">
 		</div>
 		<div id="menusuperior">		
-			<div><a href="index.html">Home</a></div>
-			<div><a href="sobrenos.html">Sobre</a></div>
-			<div><a href="contato.html">Contato</a></div>
-			<div><a href="paginadenoticias.html">Saiba Mais</a></div>
+			<div><a href="https://thegoodnewstime.netlify.app/index.html">Home</a></div>
+			<div><a href="https://thegoodnewstime.netlify.app/sobrenos.html">Sobre</a></div>
+			<div><a href="https://thegoodnewstime.netlify.app/contato.html">Contato</a></div>
+			<div><a href="https://thegoodnewstime.netlify.app/paginadenoticias.html">Saiba Mais</a></div>
 		</div>
 
 			<div id="noticiasemdestaques">
@@ -27,7 +27,7 @@
 
             <div class="perfil">
                 <div class="perfildestaques">
-                    <a href="https://www.linkedin.com/in/william-menochelli/"><img src="/projetoitautechturma5/img/Perfil-william.jpg"></a>
+                    <a href="https://www.linkedin.com/in/william-menochelli/"><img src="https://thegoodnewstime.netlify.app/img/Perfil-william.jpg"></a>
                     <p class="onepagenoticia">
                         <br>
                         Sobre<br>
@@ -46,7 +46,7 @@
 
 			<div class="perfil">
 				    <div class="perfildestaques">
-						<a href="https://www.linkedin.com/in/jonas-arruda-29b59525/"><img src="/projetoitautechturma5/img/Perfil-jonas-arruda.jpg"></a>
+						<a href="https://www.linkedin.com/in/jonas-arruda-29b59525/"><img src="https://thegoodnewstime.netlify.app/img/Perfil-jonas-arruda.jpg"></a>
                         <p class="onepagenoticia">
                             <br>
                             Sobre<br>
@@ -59,7 +59,7 @@
      		</div>	
             <div class="perfil">
 				    <div class="perfildestaques">
-						<a href="https://www.linkedin.com/in/gabriel-vinicius-dias-faustino-653814142/"><img src="/projetoitautechturma5/img/perfil-gabriel-vinicius.png"></a>
+						<a href="https://www.linkedin.com/in/gabriel-vinicius-dias-faustino-653814142/"><img src="https://thegoodnewstime.netlify.app/img/perfil-gabriel-vinicius.png"></a>
                         <p class="onepagenoticia">
                             <br>
                             Sobre<br>
@@ -74,7 +74,7 @@
 
             <div class="perfil">
                 <div class="perfildestaques">
-                    <a href="https://www.linkedin.com/in/esio-junior-94893911a/"><img src="/projetoitautechturma5/img/perfil-esio-junior.png"></a>
+                    <a href="https://www.linkedin.com/in/esio-junior-94893911a/"><img src="https://thegoodnewstime.netlify.app/img/perfil-esio-junior.png"></a>
                     <p class="onepagenoticia">
                         <br>
                         Sobre<br>
