--- a/paginadenoticias.html
+++ b/paginadenoticias.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="pt-br" xml:lang="pt-br">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>THE GOOD NEWS TIME</title>
-<link rel="stylesheet" type="text/css" href="/projetoitautechturma5/css/estilo.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="https://thegoodnewstime.netlify.app/css/estilo.css" media="screen" />
 </head>
 
 <body>
@@ -12,18 +12,18 @@
 			<h1>The Good News Time</h1>
 		</div>		
 		<div id="logo">
-			<img src="img/tgnt_logo.png" width="427" height="165">
+			<img src="https://thegoodnewstime.netlify.app/img/tgnt_logo.png" width="427" height="165">
 		</div>
 		<div id="menusuperior">		
-			<div><a href="index.html">Home</a></div>
-			<div><a href="sobrenos.html">Sobre</a></div>
-			<div><a href="contato.html">Contato</a></div>
-			<div><a href="paginadenoticias.html">Saiba Mais</a></div>
+			<div><a href="https://thegoodnewstime.netlify.app/index.html">Home</a></div>
+			<div><a href="https://thegoodnewstime.netlify.app/sobrenos.html">Sobre</a></div>
+			<div><a href="https://thegoodnewstime.netlify.app/contato.html">Contato</a></div>
+			<div><a href="https://thegoodnewstime.netlify.app/paginadenoticias.html">Saiba Mais</a></div>
 		</div>
 			<div class="fonte">
                 <div class="fontedanoticia">
                     <h3>Meninas afegãs criam ventilador pulmonar de baixo custo para salvar pacientes com Covid-19</h3>
-                    <img class="imgdanoticia" src="/projetoitautechturma5/img/noticia-boa-covid-1.jpg">	
+                    <img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/img/noticia-boa-covid-1.jpg">	
                     <p class="onepagenoticia">
                         <br>
                         FONTE DA NOTICIA<br>
@@ -39,7 +39,7 @@
             <div class="fonte">
                 <div class="fontedanoticia">
                     <h3>Cinco estados brasileiros não registram mortes por Covid-19 nas últimas 24 horas</h3>
-                    <img class="imgdanoticia" src="/projetoitautechturma5/img/noticia-boa-covid-2.jpg">	
+                    <img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/img/noticia-boa-covid-2.jpg">	
                     <p class="onepagenoticia">
                         <br>
                         FONTE DA NOTICIA<br>
@@ -55,7 +55,7 @@
             <div class="fonte">
                 <div class="fontedanoticia">
                     <h3>Vacina em fase teste contra COVID-19 chega ao Brasil - Plantão COVID-19: As boas notícias!</h3>
-                    <img class="imgdanoticia" src="/projetoitautechturma5/img/noticia-boa-covid-3.jpg">	
+                    <img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/img/noticia-boa-covid-3.jpg">	
                     <p class="onepagenoticia">
                         <br>
                         FONTE DA NOTICIA<br>
@@ -71,7 +71,7 @@
             <div class="fonte">
                 <div class="fontedanoticia">
                     <h3>Pesquisadores desenvolvem máscara facial que detecta Covid-19 em 90 minutos</h3>
-                    <img class="imgdanoticia" src="/projetoitautechturma5/img/noticia-boa-covid-4.jpg">	
+                    <img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/img/noticia-boa-covid-4.jpg">	
                     <p class="onepagenoticia">
                         <br>
                         FONTE DA NOTICIA<br>
@@ -87,7 +87,7 @@
             <div class="fonte">
                 <div class="fontedanoticia">
                     <h3>Anticorpos contra o coronavírus em desenvolvimento - Plantão COVID-19</h3>
-                    <img class="imgdanoticia" src="/projetoitautechturma5/img/noticia-boa-covid-5.jpg">	
+                    <img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/img/noticia-boa-covid-5.jpg">	
                     <p class="onepagenoticia">
                         <br>
                         FONTE DA NOTICIA<br>
@@ -103,7 +103,7 @@
             <div class="fonte">
                 <div class="fontedanoticia">
                     <h3>Possível data para vacinação total no Brasil – Plantão COVID-19: As boas notícias</h3>
-                    <img class="imgdanoticia" src="/projetoitautechturma5/img/noticia-boa-covid-6.jpg">	
+                    <img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/img/noticia-boa-covid-6.jpg">	
                     <p class="onepagenoticia">
                         <br>
                         FONTE DA NOTICIA<br>
