--- a/noticia-boa-03.html
+++ b/noticia-boa-03.html
@@ -24,30 +24,22 @@
 			<div class="noticiaonepage">
 
 				<div class="destaqueonepage">
-                    <h3>Possível data para vacinação total no Brasil – Plantão COVID-19: As boas notícias</h3>
-                    <iframe class="videosfull" src="https://www.youtube.com/embed/q1XqfFGIFrU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <h3>154,4 mil vacinas contra a Covid-19 chegam ao Paraná</h3>
+                    <audio id="player" autoplay="autoplay" controls="controls">
+                        <source src="https://thegoodnewstime.netlify.app/audio/MAIS154MILVACINAS.mp3" type="audio/mp3" />
+                        seu navegador não suporta HTML5
+                    </audio>
 				    <p class="onepagenoticia">
-                        No Plantão de Boas Notícias desta semana falamos sobre a imunidade que pode estar mais difundida do que imaginamos e vacinas contra coronavírus, que já chegaram ao Brasil! Confira! <br>
+                        A Secretaria de Estado da Saúde recebeu nesta segunda-feira mais 154.440 vacinas contra a Covid-19 da Pfizer/BioNTech.<br>
+                        A nova remessa desembarcou no Aeroporto Internacional Afonso Pena, em São José dos Pinhais.<br>
+                        Desse total, 135.837 são destinadas para segundas doses da população em geral de 18 a 59 anos, 2.802 para primeiras doses de adolescentes indígenas e 15.801 vão para reserva técnica.<br>
+                        Além dos imunizantes, o Governo do Estado também recebe 2.704.400 seringas descartáveis.<br>
+                        Os lotes foram encaminhados para o Centro de Medicamentos do Paraná, em Curitiba, onde são conferidos e armazenados.<br>
+                        A previsão é que sejam distribuídos às Regionais de Saúde nesta quarta-feira.<br>
+                        O Paraná já aplicou 14 milhões e 254 mil vacinas contra a Covid-19, sendo 8.327.478 primeiras doses, 325.012 doses únicas e 5.475.844 segundas doses. 99,2% da população adulta já recebeu ao menos uma dose e 66,5% deste público está completamente imunizado.<br>
+                        Além disso, o Estado também registra a aplicação de 21.436 doses adicionais e 105.699 reforços. (Repórter: Gustavo Vaz)
                         <br>
-                        00:00 Abertura<br>
-                        01:10 Imunidade pode ser mais difundida<br>
-                        03:30 Vacina da Pfizer muito promissora<br>
-                        04:51 Teste de vacina em SP na semana que vem?<br>
-                        06:21 Primeira brasileira vacinada!<br>
-                        <br>
-                        Créditos<br>
-                        <br>
-                        Apresentação: Felipe Payão e Léo Rocha<br>
-                        Pauta: Felipe Payão<br>
-                        Direção: Renan Pagliarusi<br>
-                        Imagens(de casa): Leonardo Rocha e Felipe Payão<br>
-                        Edição de vídeo: Larissa Kinoshita<br>
-                        Motion Graphics: Gustavo Silva<br>
-                        Arte da thumb: Fernando Perazzoli<br>
-                        <br>
-                        O "Plantão COVID-19 as boas notícias" é um programa semanal que acontece todas as sextas-feiras no canal do TecMundo. No programa são repercutidas notícias da semana que tenham relação com a pandemia do coronavírus, porém notícias que sejam uma luz no fim do túnel e que contenham uma boa dose de esperança e de evolução da humanidade. O quadro fecha a semana trazendo notícias que sejam relevantes e que tragam alguma tranquilidade as pessoas ao mesmo tempo.<br>
-                        <br>
-                        https://www.youtube.com/watch?v=q1XqfFGIFrU
+                        Fonte: https://www.aen.pr.gov.br/modules/debaser/visualizar.php?audiovideo=1&xfid=98156
                     </p>    
                 </div> 
 
