--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
 				</div>
 
 				<div class="noticiasdestaques">
-					<h3>Vacina em fase teste contra COVID-19 chega ao Brasil - Plantão COVID-19: As boas notícias!</h3>
+					<h3>154,4 mil vacinas contra a Covid-19 chegam ao Paraná</h3>
 					<img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/img/noticia-boa-covid-3.jpg">		
-					<p class="introdanoticia">No Plantão de Boas Notícias sobre o covid-19 desta semana, falamos sobre a imunidade que pode estar mais difundida do que imaginamos e vacinas contra coronavírus, que já chegaram ao Brasil! - Confira!</p>
-					<div><a href="https://thegoodnewstime.netlify.app/noticia-boa-03.html">Assistir Noticia</a></div>
+					<p class="introdanoticia">A Secretaria de Estado da Saúde recebeu nesta segunda-feira mais 154.440 vacinas contra a Covid-19 da Pfizer/BioNTech. A nova remessa desembarcou no Aeroporto Internacional Afonso Pena, em São José dos Pinhais.</p>
 				</div>
 
 			</div>	
