--- a/paginadenoticias.html
+++ b/paginadenoticias.html
@@ -54,17 +54,17 @@
 
             <div class="fonte">
                 <div class="fontedanoticia">
-                    <h3>Vacina em fase teste contra COVID-19 chega ao Brasil - Plantão COVID-19: As boas notícias!</h3>
+                    <h3>154,4 mil vacinas contra a Covid-19 chegam ao Paraná</h3>
                     <img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/img/noticia-boa-covid-3.jpg">	
                     <p class="onepagenoticia">
                         <br>
                         FONTE DA NOTICIA<br>
                         <br>
-                        Canal do Youtube Tecmundo<br>
+                        Agência de Noticias do Paraná<br>
                         <br>
-                        Link: https://www.youtube.com/watch?v=q1XqfFGIFrU<br>                        
+                        Link: https://www.aen.pr.gov.br/modules/debaser/visualizar.php?audiovideo=1&xfid=98156<br>                        
                     </p>	
-                    <div><a href="https://www.youtube.com/watch?v=q1XqfFGIFrU">Link com redirecionamento para a fonte da noticia(Página externa)</a></div>
+                    <div><a href="https://www.aen.pr.gov.br/modules/debaser/visualizar.php?audiovideo=1&xfid=98156">Link com redirecionamento para a fonte da noticia(Página externa)</a></div>
                 </div> 
             </div>	
 
