atualizacao do index - versao 6

--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
 				</div>
 
 				<div class="noticiasdestaques">
-					<h3>154,4 mil vacinas contra a Covid-19 chegam ao Paraná</h3>
+					<h3>Secretaria de Estado da Saúde do Paraná recebeu 154,4 mil vacinas contra a Covid-19</h3>
 					<img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/img/noticia-boa-covid-3.jpg">		
 					<p class="introdanoticia">A Secretaria de Estado da Saúde recebeu nesta segunda-feira mais 154.440 vacinas contra a Covid-19 da Pfizer/BioNTech. A nova remessa desembarcou no Aeroporto Internacional Afonso Pena, em São José dos Pinhais.</p>
+					<div><a href="https://thegoodnewstime.netlify.app/noticia-boa-03.html">Ouvir a noticia completa</a></div>
 				</div>
 
 			</div>	
