--- a/noticia-boa-01.html
+++ b/noticia-boa-01.html
@@ -24,32 +24,23 @@
 			<div class="noticiaonepage">
 
 				<div class="destaqueonepage">
-                    <h3>Meninas afegãs criam ventilador pulmonar de baixo custo para salvar pacientes com Covid-19</h3>
+                    <h3>Paraná chega a 99% da população adulta vacinada contra a Covid-19</h3>
                     <img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/img/noticia-boa-covid-1.jpg">	
+                    <audio id="player" autoplay="autoplay" controls="controls">
+                        <source src="https://thegoodnewstime.netlify.app/audio/PARANACHEGAA99.mp3" type="audio/mp3" />
+                        seu navegador não suporta HTML5
+                    </audio>	
 				    <p class="onepagenoticia">
-                        Em 2017, um grupo com cerca de 50 jovens afegãs do Ensino Médio criaram uma equipe de robótica que busca empoderar mulheres do Afeganistão por meio da Ciência, Tecnologia, Engenharia e Matemática.<br>
-						Conhecida como ‘Sonhadoras Afegãs‘, a equipe vinha recebendo financiamento do Digital Citizen Fund para desenvolver projetos, mas seu futuro agora é incerto, devido à instalação do regime fundamentalista talibã.<br>
-						<br>
-						Ventilador pulmonar de baixo custo<br>
-						<br>
-						No ano passado, em plena pandemia de Covid-19, cinco jovens da equipe com idades entre 15 e 19 anos se juntaram para criar um ventilador pulmonar de baixo custo para hospitais públicos do país.<br>
-						Apesar da baixa oferta de materiais e orçamento limitado, as estudantes Somaya Faruqi, Ayda Hayderpoor, Elham Mansoori, Florance Pouya e Diana Wahabzada improvisaram o equipamentto reaproveitando peças de carros, motos e máquinas descartadas pela indústria que iriam para um lixão.<br>
-						O resultado foi um ventilador pulmonar capaz de atender pacientes no pré-tratamento, aumentando as chances de vida daqueles que estão na fila de espera para atendimento, aguardando um leito de UTI.<br>
-						<br>
-						Desafios para o futuro<br>
-						<br>
-						Antes mesmo da queda do governo, no dia 15 de agosto, o Afeganistão já era um dos países com menor taxa de vacinação contra o novo coronavírus.<br>
-						Desde o início da campanha, em janeiro, apenas 0,6% da população foi totalmente imunizada. Agora, com a tomada do Talibã, há a expectativa que a vacinação seja interrompida por completo.<br>
-						O grupo radical já proibiu a vacinação em diversas províncias do país.<br>
-						<br>
-						Meninas temem pelo seu futuro<br>
-						<br>
-						Com o fim da república afegã, a Equipe de Robótica para Meninas Afegãs também está ameaçada, uma vez que as leis talibãs impedem que meninas a partir de 12 anos possam estudar, entre uma série de outras restrições absurdas.<br>
-						Apesar da facção ter afirmado que não irá proibir a educação de mulheres, as estudantes temem pelo seu futuro.<br>
-						Ainda assim, Faruqi, Hayderpoor, Mansoori, Pouya e Wahabzada deixaram seu legado. Após meses de testes, o ventilador pulmonar desenvolvido por elas está prestes a ser incorporado ao tratamento dos casos de COVID-19 no país, que não param de aumentar desde o fim de maio.<br>
-						Desejamos um Afeganistão que fomente a participação e o empoderamento feminino na sociedade, na educação e na ciência!<br>
+                        O Paraná chegou neste sábado à marca de 99% da população acima de 18 anos vacinada contra a Covid-19. 8.322.493 pessoas receberam alguma dose. Deste público, 66,3% já estão com o esquema vacinal completo.<br>
+						Apenas nas últimas 24 horas foram aplicadas 94.195 doses. Ao todo, foram 14 milhões e 222 mil aplicadas e registradas na base do PNI, o Programa Nacional de Imunizações.<br>
+						Para o secretário de saúde, Beto Preto, a reta final da vacinação contra o coronavírus agora deve ser focada em reforços e imunização de crianças e adolescentes.<br>
+						No levantamento sobre os imunizantes que chegaram ao Paraná por meio do PNI, mais de 17 milhões de doses foram entregues no Estado e distribuídas aos 399 municípios.<br>
+						Nesta sexta-feira, o Ministério da Saúde apresentou o planejamento da campanha de vacinação contra a Covid-19 para o próximo ano.<br>
+						Com tratativas para aquisição de novas doses, o governo federal anunciou mais de 354 milhões de imunizantes em 2022.<br>
+						Esse lote seria utilizado para reforçar a imunização dos brasileiros com o esquema vacinal completo neste ano e proteger crianças com menos de 12 anos, caso a Agência Nacional de Vigilância Sanitária autorize a aplicação de algum imunizante neste grupo.<br>
+						(Repórter: Gustavo Vaz)
                         <br>
-                        <div><a href="https://razoesparaacreditar.com/meninas-afegas-criam-ventilador-baixo-cust/">Fonte: Razões para Acreditar</a></div>
+                        <div><a href="https://www.aen.pr.gov.br/modules/debaser/visualizar.php?audiovideo=1&xfid=98134">Fonte: Agencia de Noticias do Paraná</a></div>
                     </p>    
                 </div> 
 
