--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 			<div class="noticias">
 
 				<div class="noticiasdestaques">
-						<h3>Meninas afegãs criam ventilador pulmonar de baixo custo para salvar pacientes com Covid-19</h3>
+						<h3>Paraná chega a 99% da população adulta vacinada contra a Covid-19</h3>
 						<img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/img/noticia-boa-covid-1.jpg">		
-						<p class="introdanoticia">Em 2017, um grupo com cerca de 50 jovens afegãs do Ensino Médio criaram uma equipe de robótica que busca empoderar mulheres do Afeganistão por meio da Ciência, Tecnologia, Engenharia e Matemática.</p>
-						<div><a href="https://thegoodnewstime.netlify.app/noticia-boa-01.html">Ler noticia completa</a></div>
+						<p class="introdanoticia">O Paraná chegou neste sábado à marca de 99% da população acima de 18 anos vacinada contra a Covid-19. 8.322.493 pessoas receberam alguma dose. Deste público, 66,3% já estão com o esquema vacinal completo.</p>
+						<div><a href="https://thegoodnewstime.netlify.app/noticia-boa-01.html">Ouvir a noticia completa</a></div>
 				</div> 
 
 				<div class="noticiasdestaques">
