--- a/noticia-boa-03.html
+++ b/noticia-boa-03.html
@@ -25,6 +25,7 @@
 
 				<div class="destaqueonepage">
                     <h3>154,4 mil vacinas contra a Covid-19 chegam ao Paraná</h3>
+                    <img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/img/noticia-boa-covid-3.jpg">	
                     <audio id="player" autoplay="autoplay" controls="controls">
                         <source src="https://thegoodnewstime.netlify.app/audio/MAIS154MILVACINAS.mp3" type="audio/mp3" />
                         seu navegador não suporta HTML5
