--- a/paginadenoticias.html
+++ b/paginadenoticias.html
@@ -22,17 +22,17 @@
 		</div>
 			<div class="fonte">
                 <div class="fontedanoticia">
-                    <h3>Meninas afegãs criam ventilador pulmonar de baixo custo para salvar pacientes com Covid-19</h3>
+                    <h3>Paraná chega a 99% da população adulta vacinada contra a Covid-19</h3>
                     <img class="imgdanoticia" src="https://thegoodnewstime.netlify.app/img/noticia-boa-covid-1.jpg">	
                     <p class="onepagenoticia">
                         <br>
                         FONTE DA NOTICIA<br>
                         <br>
-                        Web Site Razões para acreditar<br>
+                        Agência de Noticias do Paraná<br>
                         <br>
-                        Link: https://razoesparaacreditar.com/meninas-afegas-criam-ventilador-baixo-cust/"<br>                        
+                        https://www.aen.pr.gov.br/modules/debaser/visualizar.php?audiovideo=1&xfid=98134<br>                        
                     </p>	
-                    <div><a href="https://razoesparaacreditar.com/meninas-afegas-criam-ventilador-baixo-cust/">Link com redirecionamento para a fonte da noticia(Página externa)</a></div>
+                    <div><a href="https://www.aen.pr.gov.br/modules/debaser/visualizar.php?audiovideo=1&xfid=98134">Link com redirecionamento para a fonte da noticia(Página externa)</a></div>
                 </div> 
          </div>	
 
